fixed the value which apparently caused overflow on chromium browsers

--- a/src/main/resources/static/styles/form.css
+++ b/src/main/resources/static/styles/form.css
@@ -202,7 +202,7 @@ body {
 
 #chapters-menu-header {
     position: sticky;
-    width: 93%;
+    width: 92%;
     top: 0px;
     background-color: #FFF5D2;
     display: flex;
